11-kubernetes-configmaps-secrets-ingress/12-hybrid-ingress/hybrid-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatri-hybrid-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: yatri.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: yatri-api
                port:
                  number: 80
    - host: api.yatri.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-api
                port:
                  number: 80
